some format elements completed

--- a/htmlElements/formatting/abbr.html
+++ b/htmlElements/formatting/abbr.html
@@ -12,25 +12,27 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Abbr - &lt;abbr&gt;</h1>
+    <p>This element defines an abbreviation or an acronym like HTML or CSS.</p>
+    <p>Use the global title attribute to show the description for the abbreviation when you hover the mouse over the element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This webpage uses <abbr title="Hyper Text Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/abbrExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/examples/abbrDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
