--- a/htmlElements/formatting/address.html
+++ b/htmlElements/formatting/address.html
@@ -12,25 +12,33 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Address - &lt;address&gt;</h1>
+    <p>This element definesthe contact information for the author/owner of a document or an article.</p>
+    <p>The contact informationj can be an email address, URL, physical address, phone mumber, social media handle etc.</p>
+    <p>The text in the address element usually renders in italic and browsers will always add a line break before and after the address element.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <address>
+        Written by Stephen Mogg <br>
+        Email us at<a href="mailto:randomEmail@gmail.com">randomEmail@.com</a><br>
+        town, street, house number <br>
+        UK
+    </address>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/addressExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/addressDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
