--- a/htmlElements/formatting/bdi.html
+++ b/htmlElements/formatting/bdi.html
@@ -12,15 +12,21 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Bdi - &lt;bdi&gt;</h1>
+    <p>Bdi stands for bi-directional isolation</p>
+    <p>This element is used to isolate a part of text that might be formatted in a different direction from other text outside it.</p>
+    <p>This element becomes especially useful when embedding user generated content with an unknown text direction.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <ul>
+        <li>user <bdi>info</bdi> 1 point</li>
+        <li>user <bdi>info</bdi> 2 points</li>
+        <li>user <bdi>إيان</bdi> 3 points</li>   
+    </ul>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/bdiExample.png">
 
     <br>
 
@@ -30,7 +36,8 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
