--- a/htmlElements/formatting/bdo.html
+++ b/htmlElements/formatting/bdo.html
@@ -12,25 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Bdo - &lt;bdo&gt;</h1>
+    <p>bdo stands for bi-directional override</p>
+    <p>This element is used to override the current text direction</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <bdo dir="rtl">This text goes right to left.</bdo>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/bdoExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/bdoDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>dir - ltr(left to right) or rtl(right to left)</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
