--- a/htmlElements/formatting/blockQuote.html
+++ b/htmlElements/formatting/blockQuote.html
@@ -12,25 +12,31 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Block quote - &lt;blockquote&gt;</h1>
+    <p>This element specifies a section that is quoted from another source.</p>
+    <p>Browsers usually indent blockquote elements.</p>
+    <p>The q element is used for small inline quotations.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <blockquote cite="www.wikipedia.com">
+        "This is a random quote within the the blockquote element."
+    </blockquote>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/blockquoteExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/blockQuoteDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>cite - Provide a source for the quotation.</p> 
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
