--- a/htmlElements/formatting/cite.html
+++ b/htmlElements/formatting/cite.html
@@ -12,25 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Cite - &lt;cite&gt;</h1>
+    <p>The cite element defines a title of creative work. For example a book, poem, song, movie, painting. sculpture</p>
+    <p>A persons name is not the title of the work.</p>
+    <p>The text inside of this element usually renders in italic.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p><cite>The Scream</cite> by Edward Munch. Painted in 1893.</p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/citeExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/citeDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
