--- a/htmlElements/formatting/del.html
+++ b/htmlElements/formatting/del.html
@@ -12,25 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Del - &lt;del&gt;</h1>
+    <p>This element defines text that has been deleted from the document. The browser will show a line through the text.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text!<del> This is deleted text!</del></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/delExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/delDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>cite - specifies a url to the document that explains the reason why the text was deleted.</p>
+    <p>datetime - Specifies the date and time of when the text was deleted.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
