--- a/htmlElements/formatting/b.html
+++ b/htmlElements/formatting/b.html
@@ -12,25 +12,27 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>B - &lt;b&gt;</h1>
+    <p>This element specifies bold text without any extra importance.</p>
+    <p>According to the specification the b t ag should be used as a last resort. when no other tag is more appopriate. H1-h6 comes first, em emphasized text comes next, then strong important text and then mark for marked/ highlighted text.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <b>This is bold text</b></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/bExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/bDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
