--- a/htmlElements/formatting/code.html
+++ b/htmlElements/formatting/code.html
@@ -5,6 +5,16 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        code 
+        {
+            font-family: Consolas,"courier new";
+            color: crimson;
+            background-color: #f1f1f1;
+            padding: 2px;
+            font-size: 105%;
+        }
+    </style>
 
     <title>&lt;code&gt;</title>
 </head>
@@ -12,25 +22,29 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Code - &lt;code&gt;</h1>
+    <p>This element defines a piece of computer code. The content inside is displayed in the browsers monospace font.</p>
+    <p>It is possible to achieve a richer effect by using css</p>
+    <p>It seems to basically just use the monospace font in order to display text that looks like code not visible to the user.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. The following is code text =><code>background-color</code></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/codeExample1.png">
+    <img src="./media/examples/codeExample2.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/codeDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported</p>
     
 </body>
 </html>
