Progress on formatting elements.

--- a/htmlElements/formatting/em.html
+++ b/htmlElements/formatting/em.html
@@ -12,25 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Em - &lt;em&gt;</h1>
+    <p>This element is used to define emphasized text.</p>
+    <p>The content inside is typically displayed in italic.</p>
+    <p>A screen reader will pronounce the words in this element using verbal stress.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <em>This is emphasized text.</em></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/emExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/emDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
