--- a/htmlElements/formatting/i.html
+++ b/htmlElements/formatting/i.html
@@ -12,25 +12,33 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>I - &lt;i&gt;</h1>
+    <p>This element defines text that is in an alternate voice or mood. It is usually displayed in italics.</p>
+    <p>The element is typically used to indicate a technical term, a phrase from another language, another language, a thought, a ship name etc.</p>
+    <p>This should only be used when there is not a more appropriate semantic element such as:</p>
+    <li>emphasized text.</li>
+    <li>strong text.</li>
+    <li>markup text.</li>
+    <li>cite text</li>
+    <li>definition term.</li>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. The following word is a technical term => <i>Volkswagen</i> is the make of the golf car.</p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/iExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/iDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
