--- a/htmlElements/formatting/ins.html
+++ b/htmlElements/formatting/ins.html
@@ -12,25 +12,29 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Ins - &lt;ins&gt;</h1>
+    <p>This element defines text that has been inserted into a document. Browsers will display this underlined.</p>
+    <p>This is usually done after the delete element has been used.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <ins>This text has been inserted</ins></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/insExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/insDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>cite - Specifies a url to explain the reason why the text was inserted</p>
+    <p>datetime - specifies the datetime of when the text was inserted.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
