--- a/htmlElements/formatting/kbd.html
+++ b/htmlElements/formatting/kbd.html
@@ -5,32 +5,43 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <style>
+        kbd 
+        {
+          border-radius: 2px;
+          padding: 2px;
+          border: 1px solid black;
+        }
+    </style>
+
     <title>&lt;kbd&gt;</title>
 </head>
 
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Kbd - &lt;kbd&gt;</h1>
+    <p>This element defines keyboard input. The content inside is displayed in the browserrs monospace font.</p>
+    <p>This should be paired with css to create a richer effect.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. The following text is keyboard input => <kbd>CTRL</kbd> and <kbd>ALT</kbd>.</p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/kbdExample1.png">
+    <img src="./media/examples/kbdExample2.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/kbdDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
