--- a/htmlElements/formatting/mark.html
+++ b/htmlElements/formatting/mark.html
@@ -12,25 +12,26 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Mark - &lt;mark&gt;</h1>
+    <p>This element defines text that should be marked or highlighted</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <mark>This is marked text.</mark></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/markExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/markDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
