--- a/htmlElements/formatting/pre.html
+++ b/htmlElements/formatting/pre.html
@@ -12,25 +12,33 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Pre - &lt;pre&gt;</h1>
+    <p>The pre element defines preformatted text.</p>
+    <p>The text in a pre element is displayed in a fixed width property. the text preserves both spaces and line breaks. It is also displayed like written as hmtl source code.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text
+        <pre>
+        This is text in a pre element.
+        more text.
+        more text.
+    </pre></p>
+    
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/preExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/preDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
