--- a/htmlElements/formatting/q.html
+++ b/htmlElements/formatting/q.html
@@ -12,25 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Q - &lt;q&gt;</h1>
+    <p>This element defines a short quotation.</p>
+    <p>Browsers usually insert quotation marks aroudn the quotation.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>Wikipedia is good for <q>Supplying mass amounts of information at the users ease.</q> It is a great tool.</p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/qExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/qDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>cite - Specifies the source url for the quote.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
