formatting elements completed

--- a/htmlElements/formatting/s.html
+++ b/htmlElements/formatting/s.html
@@ -12,25 +12,27 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>S - &lt;s&gt;</h1>
+    <p>This element defines text that is no longer correct, accurate or relevent. The text will be displayed with a line through.</p>
+    <p>This should not be used to define text that has been deleted.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This normal text <s>This is text that is not relevent anymore.</s></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/sExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/uDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
