--- a/htmlElements/formatting/samp.html
+++ b/htmlElements/formatting/samp.html
@@ -5,32 +5,43 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <style>
+        samp{
+           font-family: monospace;
+           background-color: #f1f1f1;
+           white-space: pre;
+        }
+    </style>
+
     <title>&lt;samp&gt;</title>
 </head>
 
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Samp - &lt;samp&gt;</h1>
+    <p>This element defines sample output from a computer program. This content is displayed in the browsers default monospace font.</p>
+    <p>This element should be used with css to create a richer effect.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>Message from my computer:</p>
+    <p><samp>File not found.<br>Press F1 to continue</samp></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/sampExample1.png">
+    <img src="./media/examples/sampExample2.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/sampDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
