--- a/htmlElements/formatting/sub.html
+++ b/htmlElements/formatting/sub.html
@@ -12,25 +12,27 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Sub - &lt;sub&gt;</h1>
+    <p>The sub element defines subscription text. This text appears half a character below the normal line. It is sometimes rednered in a smaller font. Subscript text can be used for chemical formuals like H<sub>2</sub>O.</p>
+    <p>The sup element defines superscripted text</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <sub>This is subscripted text.</sub></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/subExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/subDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
