--- a/htmlElements/formatting/sup.html
+++ b/htmlElements/formatting/sup.html
@@ -12,25 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>]
+    <h1>Sup - &lt;sup&gt;</h1>
+    <p>This element defines superscripted text. This text appears half a character above the normal line, and it is sometimes rendered in a smaller font.</p>
+    <p>This text can be used for footnotes like WWW<sup>[1]</sup></p>
+    <p>sub element is used for subscripted text.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <sup>This is superscripted text.</sup></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/supExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/supDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
