--- a/htmlElements/formatting/u.html
+++ b/htmlElements/formatting/u.html
@@ -12,25 +12,27 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>U - &lt;u&gt;</h1>
+    <p>The u element represents some text that is unarticulated and styled differently from the normal text. Misspelled words or proper names in chinese text. Content is usually displayed underlined.</p>
+    <p>Avoid using the u element where it could be confused with a hyperlink.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is spelt correctly. <u>Thiss iss nott speltt corrrectly.</u></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/uExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/uDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
