--- a/htmlElements/formatting/var.html
+++ b/htmlElements/formatting/var.html
@@ -12,25 +12,28 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Var - &lt;var&gt;</h1>
+    <p>This element is used to define a variable in programming or in a mathematical expression. The content inside is displayed in italic.</p>
+    <p>This tag should be styled to create a richer effect.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <var>A = 5.</var> <var>B = 5.</var></p>
+    <p>A x B = 25</p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/varExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/varDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
