--- a/htmlElements/formatting/wbr.html
+++ b/htmlElements/formatting/wbr.html
@@ -12,15 +12,15 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Wbr - &lt;wbr&gt;</h1>
+    <p>The &lt;wbr&gt; tag is used to insert a word break opportunity. This is used to allow the browser to break a word across multiple lines.</p>
+    <p>When a word is too long the browser might break it at the wrong point. This elemennt is used to define the word break opportunity.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
-    <p>This is how its coded:</p>
-    <img src="">
+    <p>Thisisaverylongsentenceand<wbr>thebrowserwillbreakthistextoffatspecificwordintervalsthatwedefinewiththewbrelement.<wbr>    Insteadofbreakingoffinthemiddleofaword<wbr>wecanspecifytobreakoffatplacesthatendonaword.</p>
+    <img src="./media/examples/wbrExample.png">
 
     <br>
 
@@ -30,7 +30,8 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
