--- a/htmlElements/formatting/rt.html
+++ b/htmlElements/formatting/rt.html
@@ -12,25 +12,30 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Rt - &lt;rt&gt;</h1>
+    <p>This element defines an explanation of characters in a ruby annotation.</p>
+    <p>Use rt together with ruby and rp. The ruby element consists of one or more characters that needs explaining, rt gives the information, and the rp element defines what to show for browsers that do not support ruby annotations.</p>
+    <p>This element is used typically for japanese annotations.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <ruby>
+        漢 <rt> ㄏㄢˋ </rt>
+    </ruby>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/rtExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/rtDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
