--- a/htmlElements/formatting/ruby.html
+++ b/htmlElements/formatting/ruby.html
@@ -12,15 +12,20 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Ruby - &lt;ruby&gt;</h1>
+    <p>This element defines a ruby annotation</p>
+    <p>A ruby annotation is a small piece of text that indicates the pronunciation or meaning of the corresponding characters.</p>
+    <p>Use ruby together with rt and rp. The ruby element consists of one or more characters that needs explaining, rt gives the information, and the rp element defines what to show for browsers that do not support ruby annotations.</p>
+    <p>This element is used typically for japanese annotations and publications.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">]
+    <ruby>
+        漢 <rt> ㄏㄢˋ </rt>
+    </ruby>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/rubyExample.png">
 
     <br>
 
@@ -30,7 +35,8 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
