--- a/htmlElements/formatting/strong.html
+++ b/htmlElements/formatting/strong.html
@@ -12,25 +12,27 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
-    <p></p>
+    <h1>Strong - &lt;strong&gt;</h1>
+    <p>This element defines text with a strong importance. This content is usually displayed in bold.</p>
+    <p>Use the b element to specify bold text without any other importance.</p>
 
     <br>
 
     <h2>Examples:</h2>
-    <img src="">
+    <p>This is normal text. <strong>This is strong text.</strong></p>
     <p>This is how its coded:</p>
-    <img src="">
+    <img src="./media/examples/strongExample.png">
 
     <br>
 
     <h2>Default Styling:</h2>
-    <p>None</p>
+    <img src="./media/defaultStyles/strongDefault.png" alt="">
 
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported.</p>
+    <p>The event attributes are supported.</p>
     
 </body>
 </html>
