tweaks to linked attributes

--- a/htmlElements/basicHTML/head.html
+++ b/htmlElements/basicHTML/head.html
@@ -38,7 +38,9 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
     
 </body>
 </html>
