--- a/htmlElements/basicHTML/title.html
+++ b/htmlElements/basicHTML/title.html
@@ -41,7 +41,9 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
     
 </body>
 </html>
