--- a/htmlElements/formatting/dfn.html
+++ b/htmlElements/formatting/dfn.html
@@ -39,8 +39,12 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
