--- a/htmlElements/formatting/ins.html
+++ b/htmlElements/formatting/ins.html
@@ -33,8 +33,12 @@
     <h2>Attributes:</h2>
     <p>cite - Specifies a url to explain the reason why the text was inserted</p>
     <p>datetime - specifies the datetime of when the text was inserted.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
