--- a/htmlElements/formatting/meter.html
+++ b/htmlElements/formatting/meter.html
@@ -41,8 +41,12 @@
     <p>min - Specifies the minimum value of the range. Default value of the range. Default value is 0.</p>
     <p>optimum - Specifies what value is the optimal value for tha guage.</p>
     <p>value - Required attribute! Specifies the current value of the gauge.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
