--- a/htmlElements/formatting/progress.html
+++ b/htmlElements/formatting/progress.html
@@ -35,8 +35,12 @@
     <h2>Attributes:</h2>
     <p>max - Specifies how much of the task is required in total.</p>
     <p>value - Specifies how much of the task has been completed.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
