--- a/htmlElements/images/canvas.html
+++ b/htmlElements/images/canvas.html
@@ -50,8 +50,12 @@
     <h2>Attributes:</h2>
     <p>height - Specifies the hieght of the canvas. Default value is 150</p>
     <p>Width - Specifies the width of the canvas. DEfault is 300</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
