--- a/htmlElements/images/img.html
+++ b/htmlElements/images/img.html
@@ -35,8 +35,12 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     <p>alt - This specifies alternate text for an image.</p>
     <p>crossorigin - Allows images from third party sites that allow cross-origin access to be used with canvas.</p>
     <p>height - Specifies a height for the image.</p>
