--- a/htmlElements/images/map.html
+++ b/htmlElements/images/map.html
@@ -38,8 +38,12 @@
 
     <h2>Attributes:</h2>
     <p>name - *Required. Specifies the name of the image map.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
