--- a/htmlElements/links/a.html
+++ b/htmlElements/links/a.html
@@ -54,8 +54,12 @@
     <p>rel - specifies the relationship between the current document and the linked document.</p>
     <p>target - specifies where to target the linked document</p>
     <p>type - specifies the media type of the linked document.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
