--- a/htmlElements/links/link.html
+++ b/htmlElements/links/link.html
@@ -39,8 +39,12 @@
     <p>sizes -Specifies the size of the linked resource. this is only for "rel="icon""</p>
     <p>title - defines a preffered or an alternate stylesheet.</p>
     <p>type - specifies the media type of the linked document.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
