--- a/htmlElements/lists/ol.html
+++ b/htmlElements/lists/ol.html
@@ -39,8 +39,12 @@
     <p>reversed - specifies the order shoudl be reversed</p>
     <p>start - specifies the start value of an ordered list</p>
     <p>type - specifies the kind of marker to use in the list</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
