--- a/htmlElements/basicHTML/html.html
+++ b/htmlElements/basicHTML/html.html
@@ -32,7 +32,9 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attribute is supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
     <p>xmlns - specifies the xml namespace attribute when needing to conform to XHTML</p>
     
 </body>
