--- a/htmlElements/basicHTML/p.html
+++ b/htmlElements/basicHTML/p.html
@@ -31,8 +31,12 @@
     <br>
 
     <h2>Attributes:</h2>
-    <p>The global attributes are supported.</p>
-    <p>The eventattributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
