--- a/htmlElements/formatting/blockQuote.html
+++ b/htmlElements/formatting/blockQuote.html
@@ -35,8 +35,12 @@
 
     <h2>Attributes:</h2>
     <p>cite - Provide a source for the quotation.</p> 
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
