--- a/htmlElements/formatting/del.html
+++ b/htmlElements/formatting/del.html
@@ -32,8 +32,12 @@
     <h2>Attributes:</h2>
     <p>cite - specifies a url to the document that explains the reason why the text was deleted.</p>
     <p>datetime - Specifies the date and time of when the text was deleted.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
