--- a/htmlElements/formatting/q.html
+++ b/htmlElements/formatting/q.html
@@ -32,8 +32,12 @@
 
     <h2>Attributes:</h2>
     <p>cite - Specifies the source url for the quote.</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
