--- a/htmlElements/images/area.html
+++ b/htmlElements/images/area.html
@@ -48,8 +48,12 @@
     <p>shape - Specifies the shape of the area</p>
     <p>target - Specifies where to open the target URL</p>
     <p>type - Specifies the media type of the target URL</p>
-    <p>The global attributes are supported.</p>
-    <p>The event attributes are supported.</p>
+    <p>The global attributes are supported. 
+        <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+    </p>
+    <p>The event atttributes are suported.
+        <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+    </p>
     
 </body>
 </html>
