--- a/htmlElements/basicHTML/title.html
+++ b/htmlElements/basicHTML/title.html
@@ -29,7 +29,7 @@
 
     <br>
 
-    <h2>Examples:</h2>A
+    <h2>Examples:</h2>
     <p>This is the title of this page:</p>
     <img src="./media/examples/titleExample.png">
 
