--- a/htmlElements/formsAndInput/content.html
+++ b/htmlElements/formsAndInput/content.html
@@ -131,8 +131,12 @@
         <h2>Default Styling:</h2>
         <p>none</p>
         <h3>Attributes:</h3>
-        <p>The global attributes are supported.</p>
-        <p>The event attributes are supported.</p>
+        <p>The global attributes are supported. 
+            <a href="/htmlGlobalAttributes/htmlGlobalAttributes.html">Global</a>
+        </p>
+        <p>The event atttributes are suported.
+            <a href="/htmlEventAttributes/htmlEventAttributes.html">Event Attributes</a>
+        </p>
     </details>
     <hr>
     <h2>&lt;textarea&gt;</h2>
